AM_CPPFLAGS = -I$(top_srcdir)/include $(log4cxx_CFLAGS) $(BOOST_CPPFLAGS)

lib_LTLIBRARIES=libbgpparser.la

libbgpparser_ladir=$(includedir)/bgpparser

libbgpparser_la_SOURCES=\
AttributeType.cpp \
AttributeTypeAS4Aggregator.cpp \
AttributeTypeAS4Path.cpp \
AttributeTypeASPath.cpp \
AttributeTypeAggregator.cpp \
AttributeTypeAtomicAggregate.cpp \
AttributeTypeClusterList.cpp \
AttributeTypeCommunities.cpp \
AttributeTypeExtCommunities.cpp \
AttributeTypeLocalPref.cpp \
AttributeTypeMPReachNLRI.cpp \
AttributeTypeMPUnreachNLRI.cpp \
AttributeTypeMultiExitDisc.cpp \
AttributeTypeNextHop.cpp \
AttributeTypeOrigin.cpp \
AttributeTypeOriginatorID.cpp \
OptionalParameter.cpp \
OptionalParameterCapabilities.cpp \
BGPStructure.cpp \
BGPAttribute.cpp \
BGPCommonHeader.cpp \
BGPKeepAlive.cpp \
BGPNotification.cpp \
BGPOpen.cpp \
BGPRouteRefresh.cpp \
BGPUpdate.cpp \
MRTBgp4MPEntry.cpp \
MRTBgp4MPMessage.cpp \
MRTBgp4MPMessageAS4.cpp \
MRTBgp4MPSnapshot.cpp \
MRTBgp4MPStateChange.cpp \
MRTBgp4MPStateChangeAS4.cpp \
MRTCommonHeader.cpp \
MRTTblDump.cpp \
MRTTblDumpV2PeerIndexTbl.cpp \
MRTTblDumpV2RibGeneric.cpp \
MRTTblDumpV2RibHeader.cpp \
MRTTblDumpV2RibIPv4Multicast.cpp \
MRTTblDumpV2RibIPv4Unicast.cpp \
MRTTblDumpV2RibIPv6Multicast.cpp \
MRTTblDumpV2RibIPv6Unicast.cpp \
TblDumpV2RibEntry.cpp

libbgpparser_la_HEADERS = \
../include/bgpparser.h \
../include/Exceptions.h \
../include/AttributeType.h \
../include/AttributeTypeAS4Aggregator.h \
../include/AttributeTypeAS4Path.h \
../include/AttributeTypeASPath.h \
../include/AttributeTypeAggregator.h \
../include/AttributeTypeAtomicAggregate.h \
../include/AttributeTypeClusterList.h \
../include/AttributeTypeCommunities.h \
../include/AttributeTypeDumper.h \
../include/AttributeTypeExtCommunities.h \
../include/AttributeTypeLocalPref.h \
../include/AttributeTypeMPReachNLRI.h \
../include/AttributeTypeMPUnreachNLRI.h \
../include/AttributeTypeMultiExitDisc.h \
../include/AttributeTypeNextHop.h \
../include/AttributeTypeOrigin.h \
../include/AttributeTypeOriginatorID.h \
../include/OptionalParameter.h \
../include/OptionalParameterCapabilities.h \
../include/BGPAttribute.h \
../include/BGPAttributeDumper.h \
../include/BGPCommonHeader.h \
../include/BGPDumper.h \
../include/BGPKeepAlive.h \
../include/BGPMessageDumper.h \
../include/BGPNotification.h \
../include/BGPOpen.h \
../include/BGPRouteRefresh.h \
../include/BGPStateChangeDumper.h \
../include/BGPStructure.h \
../include/BGPUpdate.h \
../include/Dumper.h \
../include/MRTBgp4MPEntry.h \
../include/MRTBgp4MPMessage.h \
../include/MRTBgp4MPMessageAS4.h \
../include/MRTBgp4MPMessageDumper.h \
../include/MRTBgp4MPSnapshot.h \
../include/MRTBgp4MPStateChange.h \
../include/MRTBgp4MPStateChangeAS4.h \
../include/MRTBgp4MPStateChangeDumper.h \
../include/MRTCommonHeader.h \
../include/MRTStructure.h \
../include/MRTTblDump.h \
../include/MRTTblDumpV1Dumper.h \
../include/MRTTblDumpV2Dumper.h \
../include/MRTTblDumpV2PeerIndexTbl.h \
../include/MRTTblDumpV2RibGeneric.h \
../include/MRTTblDumpV2RibHeader.h \
../include/MRTTblDumpV2RibIPv4Multicast.h \
../include/MRTTblDumpV2RibIPv4Unicast.h \
../include/MRTTblDumpV2RibIPv6Multicast.h \
../include/MRTTblDumpV2RibIPv6Unicast.h \
../include/TblDumpV2RibEntry.h

