AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/parsers $(log4cxx_CFLAGS) $(BOOST_CPPFLAGS)

lib_LTLIBRARIES=libbgpparser.la

libbgpparser_la_SOURCES=\
AttributeType.cpp \
AttributeTypeAS4Aggregator.cpp \
AttributeTypeAS4Path.cpp \
AttributeTypeASPath.cpp \
AttributeTypeAggregator.cpp \
AttributeTypeAtomicAggregate.cpp \
AttributeTypeClusterList.cpp \
AttributeTypeCommunities.cpp \
AttributeTypeExtCommunities.cpp \
AttributeTypeLocalPref.cpp \
AttributeTypeMPReachNLRI.cpp \
AttributeTypeMPUnreachNLRI.cpp \
AttributeTypeMultiExitDisc.cpp \
AttributeTypeNextHop.cpp \
AttributeTypeOrigin.cpp \
AttributeTypeOriginatorID.cpp \
OptionalParameter.cpp \
OptionalParameterCapabilities.cpp \
BGPStructure.cpp \
BGPAttribute.cpp \
BGPCommonHeader.cpp \
BGPKeepAlive.cpp \
BGPNotification.cpp \
BGPOpen.cpp \
BGPRouteRefresh.cpp \
BGPUpdate.cpp \
MRTBgp4MPMessage.cpp \
MRTBgp4MPMessageAS4.cpp \
MRTBgp4MPStateChange.cpp \
MRTBgp4MPStateChangeAS4.cpp \
MRTCommonHeader.cpp \
MRTTblDump.cpp \
MRTTblDumpV2PeerIndexTbl.cpp \
MRTTblDumpV2RibGeneric.cpp \
MRTTblDumpV2RibHeader.cpp \
MRTTblDumpV2RibIPv4Multicast.cpp \
MRTTblDumpV2RibIPv4Unicast.cpp \
MRTTblDumpV2RibIPv6Multicast.cpp \
MRTTblDumpV2RibIPv6Unicast.cpp \
TblDumpV2RibEntry.cpp \
../include/bgpparser.h \
../include/Exceptions.h \
../include/parsers/AttributeType.h \
../include/parsers/AttributeTypeAS4Aggregator.h \
../include/parsers/AttributeTypeAS4Path.h \
../include/parsers/AttributeTypeASPath.h \
../include/parsers/AttributeTypeAggregator.h \
../include/parsers/AttributeTypeAtomicAggregate.h \
../include/parsers/AttributeTypeClusterList.h \
../include/parsers/AttributeTypeCommunities.h \
../include/parsers/AttributeTypeExtCommunities.h \
../include/parsers/AttributeTypeLocalPref.h \
../include/parsers/AttributeTypeMPReachNLRI.h \
../include/parsers/AttributeTypeMPUnreachNLRI.h \
../include/parsers/AttributeTypeMultiExitDisc.h \
../include/parsers/AttributeTypeNextHop.h \
../include/parsers/AttributeTypeOrigin.h \
../include/parsers/AttributeTypeOriginatorID.h \
../include/parsers/OptionalParameter.h \
../include/parsers/OptionalParameterCapabilities.h \
../include/parsers/BGPAttribute.h \
../include/parsers/BGPCommonHeader.h \
../include/parsers/BGPKeepAlive.h \
../include/parsers/BGPNotification.h \
../include/parsers/BGPOpen.h \
../include/parsers/BGPRouteRefresh.h \
../include/parsers/BGPStructure.h \
../include/parsers/BGPUpdate.h \
../include/parsers/MRTBgp4MPMessage.h \
../include/parsers/MRTBgp4MPMessageAS4.h \
../include/parsers/MRTBgp4MPStateChange.h \
../include/parsers/MRTBgp4MPStateChangeAS4.h \
../include/parsers/MRTCommonHeader.h \
../include/parsers/MRTStructure.h \
../include/parsers/MRTTblDump.h \
../include/parsers/MRTTblDumpV2PeerIndexTbl.h \
../include/parsers/MRTTblDumpV2RibGeneric.h \
../include/parsers/MRTTblDumpV2RibHeader.h \
../include/parsers/MRTTblDumpV2RibIPv4Multicast.h \
../include/parsers/MRTTblDumpV2RibIPv4Unicast.h \
../include/parsers/MRTTblDumpV2RibIPv6Multicast.h \
../include/parsers/MRTTblDumpV2RibIPv6Unicast.h \
../include/parsers/TblDumpV2RibEntry.h \
../include/visitors/DepthFirstVisitor.h \
../include/visitors/ForwardDeclarations.h \
../include/visitors/GJDepthFirst.h \
../include/visitors/GJNoArguVisitor.h \
../include/visitors/GJVisitor.h \
../include/visitors/GJVoidDepthFirst.h \
../include/visitors/GJVoidVisitor.h \
../include/visitors/Visitor.h

