
fooincludedir=$(pkgincludedir)/parsers
fooinclude_HEADERS = \
AttributeType.h                 AttributeTypeOrigin.h           MRTCommonHeader.h \
AttributeTypeAS4Aggregator.h    AttributeTypeOriginatorID.h     MRTStructure.h \
AttributeTypeAS4Path.h          BGPAttribute.h                  MRTTblDump.h \
AttributeTypeASPath.h           BGPCommonHeader.h               MRTTblDumpV2PeerIndexTbl.h \
AttributeTypeAggregator.h       BGPKeepAlive.h                  MRTTblDumpV2RibGeneric.h \
AttributeTypeAtomicAggregate.h  BGPNotification.h               MRTTblDumpV2RibHeader.h \
AttributeTypeClusterList.h      BGPOpen.h                       MRTTblDumpV2RibIPv4Multicast.h \
AttributeTypeCommunities.h      BGPRouteRefresh.h               MRTTblDumpV2RibIPv4Unicast.h \
AttributeTypeExtCommunities.h   BGPStructure.h                  MRTTblDumpV2RibIPv6Multicast.h \
AttributeTypeLocalPref.h        BGPUpdate.h                     MRTTblDumpV2RibIPv6Unicast.h \
AttributeTypeMPReachNLRI.h      MRTBgp4MPMessage.h              Node.h \
AttributeTypeMPUnreachNLRI.h    MRTBgp4MPMessageAS4.h           OptionalParameter.h \
AttributeTypeMultiExitDisc.h    MRTBgp4MPStateChange.h          OptionalParameterCapabilities.h \
AttributeTypeNextHop.h          MRTBgp4MPStateChangeAS4.h       TblDumpV2RibEntry.h

